-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9, 10, 11, 12, 13, 14
-
Component/s: client-libs
-
Environment:
OEL7.6-uek-x64/JDK8u221b06(64bit)/tonga-4.0.2-rc2
-
b30
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227626 | 14 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b06 |
| JDK-8228319 | 13.0.2 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b01 |
| JDK-8228103 | 13.0.1 | Prasanta Sadhukhan | P3 | Closed | Fixed | b02 |
| JDK-8227838 | 11.0.6-oracle | Prasanta Sadhukhan | P3 | Resolved | Fixed | b01 |
| JDK-8228557 | 11.0.5-oracle | Prasanta Sadhukhan | P3 | Closed | Fixed | b03 |
| JDK-8229293 | 11.0.5 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b03 |
| JDK-8229989 | openjdk8u232 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b05 |
| JDK-8227663 | 8u241 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b01 |
| JDK-8228511 | 8u231 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b04 |
| JDK-8235027 | emb-8u241 | Prasanta Sadhukhan | P3 | Resolved | Fixed | team |
| JDK-8229677 | emb-8u231 | Prasanta Sadhukhan | P3 | Resolved | Fixed | b04 |
Test name(s): Swing_JSplitPane/Manual/bug4430294
Product(s) tested:JDK 8u221b06 (64bit)/tonga-4.0.2-rc2
OS/architecture:oel7.6-uek-x64
option: -Dswing.defaultlaf=com.sun.java.swing.plaf.gtk.GTKLookAndFeel -Djdk.gtk.version=3
Actual behavior:
1.There is no the divider shown.Refer to bug4430294-with-option.png
2.No such issue without option.Refer to bug4430294-no-option.png
3.No such issue on oel6.4-uek-x86/JDK8u221b04(32bit) with the same option
Affect test:
Swing_JScrollPane/Manual/ScrollDemo
- backported by
-
JDK-8227626 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8227663 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8227838 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8228319 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8228511 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8229293 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8229677 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8229989 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8235027 GTK L&F: JSplitPane: There is no divider shown
-
- Resolved
-
-
JDK-8228103 GTK L&F: JSplitPane: There is no divider shown
-
- Closed
-
-
JDK-8228557 GTK L&F: JSplitPane: There is no divider shown
-
- Closed
-