8225423: GTK L&F: JSplitPane: There is no divider shown

Reviewed-by: prr, serb